# tvm

src/runtime/: thread_pool.cc
userdata/: CMakeLists.txt  README.md  config.cmake  infer.cpp  nnvm_mobilenet.py  simple.py  tvm-vars.sh
userdata/Mali_OpenCL_SDK/lib/: CMakeLists.txt
userdata/export/: build.sh
